--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/checkout@v2
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -28,7 +28,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -40,3 +39,11 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: docker push solomon11/cloud:latest
+
+      - name: Run Docker container with memory limit
+        run: docker run -d -p 8080:8080 --memory="128m" solomon11/cloud:latest
+
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@v0.5.0
+        with:
+          image-ref: solomon11/cloud:latest
