--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -37,18 +37,29 @@ jobs:
       - name: Build Docker image
         run: docker build -t solomon11/cloud:latest .
 
-      - name: Scan Docker image for vulnerabilities
-        uses: aquasecurity/trivy-action@0.20.0  # Use the specified version
-        with:
-          image-ref: solomon11/cloud:latest  # Reference the built image
-          format: 'table'                      # Format of the scan report
-          exit-code: '1'                       # Fail the job if vulnerabilities are found
-          ignore-unfixed: true                  # Ignore unfixed vulnerabilities
-          vuln-type: 'os,library'              # Scan for OS and library vulnerabilities
-          severity: 'CRITICAL,HIGH'            # Focus on critical and high severity
-
       - name: Push Docker image to Docker Hub
         run: docker push solomon11/cloud:latest
 
       - name: Run Docker container with memory limit
         run: docker run -d -p 8080:8080 --memory="128m" solomon11/cloud:latest
+
+      - name: Cache Trivy DB
+        uses: actions/cache@v2
+        with:
+          path: /tmp/trivy-db
+          key: trivy-db-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            trivy-db-${{ runner.os }}-
+
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: solomon11/cloud:latest
+          format: table
+          exit-code: 1
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: CRITICAL,HIGH
+          scan-type: image
+          scan-ref: .
+          list-all-pkgs: false
