--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=Cloud-Watch
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/cloud_db}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:Solomon11}
-management.endpoints.web.exposure.include=health,info,prometheus
-management.endpoint.prometheus.enabled=true
