--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       POSTGRES_PASSWORD: Solomon11
       POSTGRES_DB: cloud_db
     ports:
-      - "5434:5432"
+      - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  app1:
+  app:
     image: solomon11/cloud:latest
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cloud_db
@@ -22,68 +22,9 @@ services:
     depends_on:
       - postgres
     ports:
-      - "8081:8080"  # Unique port for app1
+      - "8081-8083:8080"
     deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 256M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-
-  app2:
-    image: solomon11/cloud:latest
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cloud_db
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: Solomon11
-      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info
-    depends_on:
-      - postgres
-    ports:
-      - "8082:8080"  # Unique port for app2
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 256M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-
-  app3:
-    image: solomon11/cloud:latest
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cloud_db
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: Solomon11
-      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info
-    depends_on:
-      - postgres
-    ports:
-      - "8083:8080"
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 256M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
+      replicas: 3
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 1m30s
